tests/ui/dyn-star/no-explicit-dyn-star.stderr
error[E0606]: casting `usize` as `dyn* std::fmt::Display` is invalid
  --> $DIR/no-explicit-dyn-star.rs:6:48
   |
LL |     dyn_star_foreign::require_dyn_star_display(1usize as _);
   |                                                ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
